<resources>
    <string name="app_name">Birthday Remainder</string>
    <string name="app_name_reminder">Reminder</string>
    <string name="my_reminders_list_title" translation_description="Title for the 'My Reminders'screen where the user can see the list of reminders that have been added.">My Reminders</string>
    <string name="no_tasks_image_content_description">No tasks image</string>

    <string name="no_reminders_text_placeholder">You Have No Reminders Added</string>

    <string name="optionmenureminder_check">Save Reminder</string>
    <string name="optionmenu_datepicker">Note Date</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="snackbartext_emptynote">Notes cannot be empty</string>
    <string name="snackbartext_emptyReminder">Reminder Title cannot be empty</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note_message">Delete Note?</string>
    <string name="delete_reminder_message">Delete Reminder?</string>
    <string name="delete_dialog_positive_button">DELETE</string>
    <string name="delete_dialog_negative_button">CANCEL</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="all_reminders">All Reminders</string>
    <string name="reminder_date_time_text">%1$s, %2$s</string>
    <string name="reminder_repeat_text">Every %1$d %2$s(s)</string>


    <string name="snackbar_permission_message">Permission is required to launch the camera</string>
    <string name="snackbar_permission_action_message">OK</string>

    <string name="permission_dialog_title">Permission Needed</string>
    <string name="permission_dialog_message">Without this permission the app is unable to take picture for your note.Are you sure you want to deny this permission?</string>
    <string name="permission_dialog_positive">I\'M SURE</string>
    <string name="permission_dialog_negative">RE-TRY</string>
    <string name="repeat_value_dialog_message">Set Repeat Value:</string>
    <string name="value_dialog_positive_btn">OK</string>
    <string name="value_dialog_negative_btn">Cancel</string>

    <string name="reminder_notification_channel_id" translatable="false">reminder_channel</string>
    <string name="reminder_notification_channel_name" translatable="true">Reminder</string>
    <string name="reminder_notification_channel_description">User reminder</string>
    <string name="todo">TODO</string>
    <string name="reminder_title">Reminder Title…</string>
    <string name="date">Date</string>
    <string name="repetition_unit">Repetition Unit</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="repeat_interval">Repeat Interval</string>

    <string-array name="entries">
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
        <item>Hour</item>
        <item>Minute</item>
    </string-array>

    <string name="prompt">Select Mode</string>
    <string name="dialogTitle">Delete Remainder</string>
    <string name="dialogMessage">Delete Remainder will remove Remainder Notification</string>
    <string name="unitTitle">Select Unit</string>
    <string name="search">search</string>

</resources>
