<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.remainderbday.ui.list.RemindersListViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notes_container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:focusable="true"
        android:background="@color/surfaceColor">

            <TextView
                android:id="@+id/recyclerview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_vertical"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:text="@string/all_reminders"
                android:textSize="24sp"
                android:textColor="@color/accent"
                android:textAllCaps="true"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reminders_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_title"
                app:remindersList="@{viewModel.reminders}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <LinearLayout
            android:id="@+id/no_tasks_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{viewModel.isEmpty ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/no_tasks_icon"
                android:layout_width="@dimen/empty_notes_reminder_image_dimens"
                android:layout_height="@dimen/empty_notes_reminder_image_dimens"
                android:layout_gravity="center"
                app:srcCompat="@drawable/no_reminders_logo"
                android:contentDescription="@string/no_tasks_image_content_description" />

            <TextView
                android:id="@+id/no_tasks_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/list_item_padding"
                android:text="@string/no_reminders_text_placeholder"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_list_item_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> viewModel.fabNavTriggered()}"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/accent"
            app:tint="@color/icons" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>