<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.remainderbday.ui.edit.ReminderAddViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/reminderEditConstraintLayout"
           >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/reminder_background"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/reminder_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/reminder_title"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="18sp"
                android:textColor="@color/primaryTextColor"
                android:text="@={viewModel._titleEditText}"
                android:inputType="textCapSentences"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="call rony"
                android:importantForAutofill="no" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pickDate">

                        <TextView
                            android:id="@+id/reminder_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:text="@string/date"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/reminder_date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:gravity="center"
                            android:text="@{viewModel.dateText}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textStyle="normal"
                            app:drawableEndCompat="@drawable/ic_arrow_right"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/reminder_date"
                            tools:text="25/2/52" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/reminder_date" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pickTime">

                        <TextView
                            android:id="@+id/reminder_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:text="@string/time"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/reminder_time_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textStyle="normal"
                            android:text="@{viewModel.timeText}"
                            app:layout_constraintBottom_toBottomOf="@+id/reminder_text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/reminder_text"
                            tools:text="25/2/52"
                            app:drawableEndCompat="@drawable/ic_arrow_right" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/reminder_text" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pickRepeat">

                        <TextView
                            android:id="@+id/reminder_repeat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:text="@string/repeat"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Switch
                            android:id="@+id/reminder_repeat_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:textOff="@string/off"
                            android:textOn="@string/on"
                            android:checked="@{viewModel._switchRepeat}"
                            app:layout_constraintBottom_toBottomOf="@+id/reminder_repeat"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/reminder_repeat"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/reminder_repeat" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pickRepeatInterval"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/reminder_repeat_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:text="@string/repeat_interval"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/reminder_repeat_interval_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="@+id/reminder_repeat_interval"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/reminder_repeat_interval"
                            tools:text="25/2/52"
                            android:text="@{viewModel.repeatIntervalText}"
                            app:drawableEndCompat="@drawable/ic_arrow_right" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/reminder_repeat_interval" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:background="?attr/selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pickRepeatUnit"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/reminder_repeat_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:text="@string/repetition_unit"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/reminder_repeat_unit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="@+id/reminder_repeat_unit"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/reminder_repeat_unit"
                            app:layout_constraintVertical_bias="1.0"
                            tools:text="25/2/52"
                            android:text="@{viewModel.repeatIntervalUnitText}"
                            app:drawableEndCompat="@drawable/ic_arrow_right" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="@dimen/medium_margin"
                            android:layout_marginTop="@dimen/medium_margin"
                            android:layout_marginEnd="@dimen/medium_margin"
                            android:background="@android:color/darker_gray"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/reminder_repeat_unit" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnSave"
                        android:text="Save"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>